// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accepts custom bg and color 1`] = `
.c0 {
  font-size: 14px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #ffffff;
  color: #7280ed;
  border-radius: 99999px;
  display: inline-block;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

<div
  className="c0"
  color="accent"
  fontSize={1}
/>
`;

exports[`Badge renders 1`] = `
.c0 {
  font-size: 14px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #e42d42;
  color: #ffffff;
  border-radius: 99999px;
  display: inline-block;
  font-weight: bold;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
}

<div
  className="c0"
  color="white"
  fontSize={1}
/>
`;
